--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -827,6 +827,128 @@
    "source": [
     "## 2.4 Pipelines, Feature Extraction, Tuning, Composition\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4.1 Pipelines for time series panel tasks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4.2 Using transformers to deal with unequal length or missing values"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pro tipp: useful transformers to pipeline are those that \"improve\" capabilities!\n",
+    "\n",
+    "Search for these transformer tags:\n",
+    "\n",
+    "* `\"capability:unequal_length:removes\"` - ensures all instances in the panel have equal length afterwards. Examples: padding, cutting, resampling.\n",
+    "* `\"capability:missing_values:removes\"` - removes all missing values from the data (e.g., series, panel) passed to it. Example: mean imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all transformers that guarantee that the output is equal length and equal index\n",
+    "from sktime.registry import all_estimators\n",
+    "\n",
+    "all_estimators(\"transformer\", as_dataframe=True, filter_tags={\"capability:unequal_length:removes\": True })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all transformers that guarantee the output has no missing values\n",
+    "from sktime.registry import all_estimators\n",
+    "\n",
+    "all_estimators(\"transformer\", as_dataframe=True, filter_tags={\"capability:missing_values:removes\": True })"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "minor note:\n",
+    "\n",
+    "some transformers guarantee \"no missing values\" under some conditions but not always, e.g., `TimeBinAggregate`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's check the tags in one example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list all classifiers in sktime\n",
+    "from sktime.classification.feature_based import MatrixProfileClassifier\n",
+    "\n",
+    "no_missing_clf = MatrixProfileClassifier()\n",
+    "\n",
+    "no_missing_clf.get_tags()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.transformations.series.impute import Imputer\n",
+    "\n",
+    "clf_can_do_missing = Imputer() * MatrixProfileClassifier()\n",
+    "\n",
+    "clf_can_do_missing.get_tags()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4.2 Tuning and AutoML for Time Series Classification and Regression"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4.3 Advanced Composition examples - bagging, weighted ensemble"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pro tipp: bagging with a fixed single column subset can be used to turn an univariate classifier into a multivariate classifier!"
+   ]
   }
  ],
  "metadata": {
