--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -833,7 +833,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4.1 Pipelines for time series panel tasks"
+    "similar to `sklearn` for \"tabular\" classification, regression, etc,\n",
+    "\n",
+    "`sktime` has a rich set of tools for:\n",
+    "\n",
+    "* feature extraction via transformers\n",
+    "* pipeline transformers with any estimator\n",
+    "* tuning individual estimators or pipelines via grid search and similar\n",
+    "* building ensembles out of individual estimators, or other composites\n",
+    "\n",
+    "`sktime` is also fully interoperable with `sklearn` interface if `numpy` based data mtypes are used\n",
+    "\n",
+    "(although this loses support for unequal length time series)"
    ]
   },
   {
@@ -841,7 +852,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4.2 Using transformers to deal with unequal length or missing values"
+    "### 2.4.1 Primer on `sktime` transformers for feature extraction"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4.2 Pipelines for time series panel tasks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4.3 Using transformers to deal with unequal length or missing values"
    ]
   },
   {
@@ -931,7 +958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4.2 Tuning and AutoML for Time Series Classification and Regression"
+    "### 2.4.4 Tuning and AutoML for Time Series Classification and Regression"
    ]
   },
   {
@@ -939,7 +966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4.3 Advanced Composition examples - bagging, weighted ensemble"
+    "### 2.4.5 Advanced Composition examples - bagging, weighted ensemble"
    ]
   },
   {
