--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -929,114 +929,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>object</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Catch22</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.catch22.C...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Catch22Wrapper</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.catch22wr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>FittedParamExtractor</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.summarize...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RandomIntervalFeatureExtractor</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.summarize...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>RandomIntervals</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.random_in...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>RandomShapeletTransform</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.shapelet_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>SignatureTransformer</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.signature...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>SummaryTransformer</td>\n",
-       "      <td>&lt;class 'sktime.transformations.series.summariz...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>TSFreshFeatureExtractor</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.tsfresh.T...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Tabularizer</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.reduce.Ta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>TimeBinner</td>\n",
-       "      <td>&lt;class 'sktime.transformations.panel.reduce.Ti...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              name                                             object\n",
-       "0                          Catch22  <class 'sktime.transformations.panel.catch22.C...\n",
-       "1                   Catch22Wrapper  <class 'sktime.transformations.panel.catch22wr...\n",
-       "2             FittedParamExtractor  <class 'sktime.transformations.panel.summarize...\n",
-       "3   RandomIntervalFeatureExtractor  <class 'sktime.transformations.panel.summarize...\n",
-       "4                  RandomIntervals  <class 'sktime.transformations.panel.random_in...\n",
-       "5          RandomShapeletTransform  <class 'sktime.transformations.panel.shapelet_...\n",
-       "6             SignatureTransformer  <class 'sktime.transformations.panel.signature...\n",
-       "7               SummaryTransformer  <class 'sktime.transformations.series.summariz...\n",
-       "8          TSFreshFeatureExtractor  <class 'sktime.transformations.panel.tsfresh.T...\n",
-       "9                      Tabularizer  <class 'sktime.transformations.panel.reduce.Ta...\n",
-       "10                      TimeBinner  <class 'sktime.transformations.panel.reduce.Ti..."
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example: looking for all series-to-primitive transformers that are instance-wise\n",
     "from sktime.registry import all_estimators\n",
@@ -1050,6 +945,16 @@
     "        \"scitype:instancewise\": True,\n",
     "    },\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further details on transformations and feature extraction can be found in the tutorial 3, transformers.\n",
+    "\n",
+    "All composition steps therein (e.g., chaining, column subsetting) work together with all estimator types in `sktime`, including classifiers, regressors, clusterers."
    ]
   },
   {
