--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -966,6 +966,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "from sktime.transformations.series.exponent import ExponentTransformer\n",
+    "\n",
+    "pipe = ExponentTransformer() * KNeighborsTimeSeriesClassifier()\n",
+    "\n",
+    "# this constructs a ClassifierPipeline, which is also a classifier\n",
+    "pipe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternative to construct:\n",
+    "from sktime.pipeline import make_pipeline\n",
+    "\n",
+    "pipe = make_pipeline(ExponentTransformer(), KNeighborsTimeSeriesClassifier())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_unit_test\n",
+    "\n",
+    "X_train, y_train = load_unit_test(split=\"TRAIN\")\n",
+    "X_test, _ = load_unit_test(split=\"TEST\")\n",
+    "\n",
+    "# this is a forecaster with the same interface as knn-classifier\n",
+    "# first applies exponent transform, then knn-classifier\n",
+    "pipe.fit(X_train, y_train)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
