--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -1103,7 +1103,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4.4 Tuning and AutoML for Time Series Classification and Regression"
+    "### 2.4.4 Tuning and AutoML"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`sktime` classifiers are compatible with `sklearn` model selection and composition tools using `sktime` data formats.\n",
+    "\n",
+    "This extends to grid tuning and cross-validation, as long as `numpy` based formats or length/instance indexed formats are used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_unit_test\n",
+    "\n",
+    "X_train, y_train = load_unit_test(split=\"TRAIN\")\n",
+    "X_test, _ = load_unit_test(split=\"TEST\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross-validation using the `sklearn` `cross_val_score` and `KFold` functionality:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sktime.classification.feature_based import MatrixProfileClassifier\n",
+    "\n",
+    "clf = MatrixProfileClassifier()\n",
+    "\n",
+    "cross_val_score(clf, X_train, y=y_train, cv=KFold(n_splits=4))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameter tuning using `sklearn` `GridSearchCV`, we tune the _k_ and distance measure for a K-NN classifier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "\n",
+    "knn = KNeighborsTimeSeriesClassifier()\n",
+    "param_grid = {\"n_neighbors\": [1, 5], \"distance\": [\"euclidean\", \"dtw\"]}\n",
+    "parameter_tuning_method = GridSearchCV(knn, param_grid, cv=KFold(n_splits=4))\n",
+    "\n",
+    "parameter_tuning_method.fit(X_train, y_train)\n",
+    "y_pred = parameter_tuning_method.predict(X_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probability calibration with the `sklearn` `CalibratedClassifierCV`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.calibration import CalibratedClassifierCV\n",
+    "\n",
+    "from sktime.classification.interval_based import DrCIF\n",
+    "\n",
+    "calibrated_clf = CalibratedClassifierCV(\n",
+    "    base_estimator=DrCIF(n_estimators=10, n_intervals=5), cv=4\n",
+    ")\n",
+    "\n",
+    "calibrated_clf.fit(X_train, y_train)\n",
+    "y_pred = calibrated_clf.predict(X_test)"
    ]
   },
   {
