--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -1217,6 +1217,38 @@
    "source": [
     "pro tipp: bagging with a fixed single column subset can be used to turn an univariate classifier into a multivariate classifier!"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.5 Appendix - Extension guide"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`sktime` is meant to be easily extensible, for direct contribution to `sktime` as well as for local/private extension with custom methods.\n",
+    "\n",
+    "To extend `sktime` with a new local or contributed estimator, a good workflow to follow is:\n",
+    "\n",
+    "0. find the right extension template for the type of estimator you want to add - e.g., classifier, regressor, clusterer, etc. The extension templates are located in the [`extension_templates](https://github.com/sktime/sktime/blob/main/extension_templates) directory\n",
+    "1. read through the extension template - this is a `python` file with `todo` blocks that mark the places in which changes need to be added.\n",
+    "2. optionally, if you are planning any major surgeries to the interface: look at the base class - note that \"ordinary\" extension (e.g., new algorithm) should be easily doable without this.\n",
+    "3. copy the extension template to a local folder in your own repository (local/private extension), or to a suitable location in your clone of the `sktime` or affiliated repository (if contributed extension), inside `sktime.[name_of_task]`; rename the file and update the file docstring appropriately.\n",
+    "4. address the \"todo\" parts. Usually, this means: changing the name of the class, setting the tag values, specifying hyper-parameters, filling in `__init__`, `_fit`, `_predict` and/or other methods (for details see the extension template). You can add private methods as long as they do not override the default public interface. For more details, see the extension template.\n",
+    "5. to test your estimator manually: import your estimator and run it in the basic vignettes above.\n",
+    "6. to test your estimator automatically: call `sktime.tests.test_all_estimators.check_estimator` on your estimator. You can call this on a class or object instance. Ensure you have specified test parameters in the `get_test_params` method, according to the extension template.\n",
+    "\n",
+    "In case of direct contribution to `sktime` or one of its affiliated packages, additionally:\n",
+    "* add yourself as an author to the code, and to the `CODEOWNERS` for the new estimator file(s).\n",
+    "* create a pull request that contains only the new estimators (and their inheritance tree, if it's not just one class), as well as the automated tests as described above.\n",
+    "* in the pull request, describe the estimator and optimally provide a publication or other technical reference for the strategy it implements.\n",
+    "* before making the pull request, ensure that you have all necessary permissions to contribute the code to a permissive license (BSD-3) open source project."
+   ]
   }
  ],
  "metadata": {
