shorten nb2 intro

--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -1249,6 +1249,18 @@
     "* in the pull request, describe the estimator and optimally provide a publication or other technical reference for the strategy it implements.\n",
     "* before making the pull request, ensure that you have all necessary permissions to contribute the code to a permissive license (BSD-3) open source project."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Credits: notebook 2 - time series panel tasks - classification, regression, clustering\n",
+    "\n",
+    "notebook creation: "
+   ]
   }
  ],
  "metadata": {
