--- a/notebooks/03_distances_kernels_alignment.ipynb
+++ b/notebooks/03_distances_kernels_alignment.ipynb
@@ -11,7 +11,8 @@
     "    * connecting distances, aligners, classifiers\n",
     "* pairwise transformers - the \"type\" of time series distances and kernels\n",
     "* time series alignment and alignment distances, e.g., time warping\n",
-    "* composition patterns for distances, kernels, aligners"
+    "* composition patterns for distances, kernels, aligners\n",
+    "* outlook, roadmap, opportunities"
    ]
   },
   {
@@ -34,8 +35,48 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rich component relationships between object types!\n",
+    "\n",
+    "* many classifiers, regressors, clusterers use distances or kernels\n",
+    "* distances and kernels are often composite, e.g., sum-of-distance, independent distance\n",
+    "* TS distances are often based on scalar multivariate distances (e.g., Euclidean)\n",
+    "* TS distances are often based on alignment, TS aligners are an estimator type!\n",
+    "* aligners internally typically use scalar uni/multivariate distances"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "example:\n",
+    "\n",
+    "* 1-nn using `sklearn` nearest neighbors\n",
+    "* with multivariate dynamic time warping distance, from `dtw-python` library \n",
+    "* on multivariate `\"mahalanobis\"` distance from `scipy`\n",
+    "* in `sktime` compatible interface, constructed from custom components"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so, conceptually:\n",
+    "\n",
+    "* we build an sequence alignment algorithm (`dtw-python`) using `scipy` Mahalanobis dist\n",
+    "* we get the distance matrix computation from alignment algorithm\n",
+    "* we use that distance matrix in `sklearn` knn\n",
+    "* together this is a time series classifier!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +135,42 @@
    ],
    "source": [
     "clf.get_params()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "what are all the objects in this chain?\n",
+    "\n",
+    "* `ScipyDist` - pairwise distance between *scalars* - `transformer-pairwise` type\n",
+    "* `AlignerDtwFromDist` - time series alignment algorithm - `aligner` type\n",
+    "* `DistFromAligner`- pairwise distance between *time series* - `transformer-pairwise-panel` type\n",
+    "* `KNeighborsTimeSeriesClassifier` - time series classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aligner'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sktime.registry import scitype\n",
+    "\n",
+    "scitype(mw_aligner)  # prints the type of estimator (as a string)\n",
+    "# same for other components"
    ]
   },
   {
@@ -376,6 +453,14 @@
    "source": [
     "# listing all pairwise panel transformers - distances, kernels on time series\n",
     "all_estimators(\"transformer-pairwise-panel\", as_dataframe=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5 Outlook, roadmap"
    ]
   },
   {
